Bug 145496 - Text is not wrapping in dialogs
Summary: Text is not wrapping in dialogs
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
7.3.0.0 alpha0+
Hardware: All Linux (All)
: medium normal
Assignee: Jan-Marek Glogowski
URL:
Whiteboard: target:7.3.0
Keywords:
: 145347 (view as bug list)
Depends on:
Blocks:
 
Reported: 2021-11-01 15:54 UTC by David
Modified: 2021-11-03 08:03 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
test document (8.09 KB, application/vnd.oasis.opendocument.text)
2021-11-01 15:54 UTC, David
Details

Note You need to log in before you can comment on or make changes to this bug.
Description David 2021-11-01 15:54:25 UTC
Created attachment 176064 [details]
test document

If a style is extensively modified, then the settings line underneath the Contains section in the Organizer tab does not wrap. The width of the dialog box instead expands to fit the line and may go off the screen.

I attached a file to demonstrate the problem. You can modify the Default Paragraph Style to see the issue.

The text in the Help | About LibreOffice window is also not wrapping.

This happens with SAL_USE_VCLPLUGIN=gen, qt5, and kde5, but not with gtk3.

This is a very recent regression. I noticed it after bug 145363 was fixed, but that may have been a coincidence. If it wasn't caused by that fix, then it looks like it was another fix from within the last week or so.
Comment 1 Jan-Marek Glogowski 2021-11-01 16:20:37 UTC
Pending fix: https://gerrit.libreoffice.org/c/core/+/124557

A refactoring accidentally dropped the code returning the nLineWidth in the complex case...
Comment 2 Commit Notification 2021-11-01 17:41:59 UTC
Jan-Marek Glogowski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/6ac3bf96d5c1676810b31d56f9d6eca7512b9026

tdf#145496 Add dropped nLineWidth from refactoring

It will be available in 7.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 David 2021-11-02 07:37:04 UTC
Looks good!
Comment 4 Buovjaga 2021-11-03 08:03:26 UTC
*** Bug 145347 has been marked as a duplicate of this bug. ***