tdf#145496 Add dropped nLineWidth from refactoring

Regression from commit 4fc1b3fb659be916167518b49ffe8193e9033f30
("flatten ImplGetTextLines").

Change-Id: Ib9f086243b4e3ae245263492e714de6f81b89ea1